# finale

./: README.md  finale.cabal  interlude.cabal
src/: Finale.hs  Interlude.hs
test/: Spec.hs
