name:                interlude
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/wdhg/interlude#readme
license:             BSD3
license-file:        LICENSE
author:              wdhg
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
  type:
    git
  location:
    https://github.com/wdhg/interlude

library
  hs-source-dirs:
    src
  exposed-modules:
    Interlude
  default-language:
    Haskell2010
  ghc-options:
    -Wall
  build-depends:
    base >= 4.7 && < 5

test-suite test
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    Spec.hs
  default-language:
    Haskell2010
  ghc-options:
    -Wall
  build-depends:
    base >= 4.7 && < 5,
    interlude,
    HUnit
  -- other-modules:

